<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainViewModel"
            type="com.eos.parkban.viewmodels.MainViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".MainActivity">

        <RelativeLayout
            android:id="@+id/take_pic_layout"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle"
            app:layout_anchorGravity="top|center"
            android:onClick="@{mainViewModel::CameraLayoutClick}">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_centerInParent="true"
                android:src="@drawable/camera" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/take_pic_layout"
            android:layout_marginTop="20dp"
            android:layout_weight="1.1"
            android:orientation="horizontal">

            <com.eos.parkban.controls.HomeCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@color/white"
                app:Label="@string/reports"
                app:LogoImage="@mipmap/report"
                android:onClick="@{mainViewModel::ReportClick}"
                />

            <com.eos.parkban.controls.HomeCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@color/white"
                app:Label="@string/work_shift"
                android:onClick="@{mainViewModel::ShiftClick}"
                app:LogoImage="@mipmap/shift"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/layout1"
            android:layout_marginTop="4dp"
            android:layout_weight="1.1"
            android:orientation="horizontal">

            <com.eos.parkban.controls.HomeCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@color/white"
                app:Label="@string/charge"
                app:LogoImage="@mipmap/payment"
                android:onClick="@{mainViewModel::ChargeClick}"
                />

            <com.eos.parkban.controls.HomeCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@color/white"
                app:Label="@string/send_records"
                app:LogoImage="@mipmap/list"
                android:onClick="@{mainViewModel::SendRecordsClick}"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/layout2"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical">

            <com.eos.parkban.controls.HomeCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:Label="@string/setting"
                app:LogoImage="@mipmap/setting"
                android:onClick="@{mainViewModel::SettingClick}"/>

        </LinearLayout>


    </RelativeLayout>

</layout>