<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.eos.parkban.viewmodels.ChargeReportViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ChargeReportActivity">

        <com.eos.parkban.controls.Header
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            app:titleHeader="@string/charge_report" />

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:layout_marginTop="@dimen/margin_5"
            android:background="@color/white"
            android:orientation="horizontal">

            <com.eos.parkban.controls.DatePickerControls
                android:id="@+id/toDatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:Title="@string/to_date" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_5"
                android:background="@color/colorPrimary" />

            <com.eos.parkban.controls.DatePickerControls
                android:id="@+id/fromDatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:Title="@string/from_date" />

        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/button_layout"
            android:layout_below="@+id/date_layout"
            android:layout_marginBottom="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:visibility="@{viewModel.showList ? View.VISIBLE : View.GONE}">

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:nestedScrollingEnabled="false"
                    app:data_adapter="@{viewModel.adapter}"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    tools:listitem="@layout/adapter_charge_report" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:onClick="@{viewModel::showReport}"
            android:orientation="horizontal">

            <com.eos.parkban.controls.PersianTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/show_functionality"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="@dimen/button_layout_icon"
                android:layout_height="@dimen/button_layout_icon"
                android:layout_marginLeft="@dimen/margin_normal"
                android:src="@mipmap/func" />

        </LinearLayout>

    </RelativeLayout>

</layout>